# nue-asr

./: README.md  pyproject.toml
nue_asr/: __init__.py  cli.py  model.py  transcribe.py  utils.py
